# dilpack

./: .gitignore  README.md  pyproject.toml
example/classifier/mahalonobis/Data/mahalanobis_classifier/: test_labels.npy  train.npy  train_labels.npy
example/clustering/spectral/: spectral.ipynb
example/clustering/spectral/.ipynb_checkpoints/: spectral-checkpoint.ipynb
example/clustering/spectral/data/: spectral_train_set_a.npy  spectral_train_set_b.npy
example/games/: betting.ipynb
example/image/: embed.ipynb
example/neural_net/: neural_net.ipynb
src/dilpack/classifier/: mahalanobis_classifier.py
src/dilpack/classifier/Data/mahalanobis_classifier/: test.npy
src/dilpack/clustering/: spectral.py
src/dilpack/games/: games.py
src/dilpack/graph/: google_pagerank.py
src/dilpack/image/: embed.py
src/dilpack/learn/computational/: backpropagate.py  nodes.py
src/dilpack/linalg/: qr_decompose.py
