[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dilpack"
version = "0.0.1"
authors = [
  { name="Joseph Emmanuel Dayo", email="jddayo@up.edu.ph" },
]
description = "UP Diliman Linear Algebra and Numerical Methods package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pillow"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
